# ML_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
artifacts/: model.pkl  proprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/data/: EDA STUDENT PERFORMANCE .ipynb  MODEL TRAINING.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  model_trainer.py
