[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.1.0"
description = "An ML project"
authors = [{ name = "Anjali Yadav" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tensorflow==2.16.1",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pillow",
    "matplotlib",
    "numpy",
    "seaborn",
    "langchain-core<0.3.57",
    "langsmith",
    "pydantic<3.0.0,>=2.5.2",
    "PyYAML>=5.3",
    "jsonpatch>=1.33",
    "tenacity<10.0.0,>=8.1.0",
    "typing-extensions>=4.7",
    "httpx<1,>=0.23.0",
    "requests>=2,<3",
    "requests-toolbelt>=1.0.0,<2.0.0",
    "zstandard>=0.23.0,<0.24.0",
    "packaging<25"
]

[tool.setuptools.packages.find]
where = ["src"]
